--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -55,6 +55,12 @@
 			<field name="peso_metro"/>
 		    </group>	
 		    <group>
+			<field name="barras_1_imagen"/>
+			<field name="barras_1_texto"/>
+			<field name="barras_2_imagen"/>
+			<field name="barras_2_texto"/>
+			<field name="barras_3_imagen"/>
+			<field name="barras_3_texto"/>
 		        <field name="descripcion"/>
 		    </group>
 		</group>
