--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -109,7 +109,7 @@
 		    		<field name="name" invisible="1" />
 		    		<field name="product_qty" invisible="1" />
 		    		<field name="product_uom_qty" invisible="1" />
-		    		<field name="price_unit"/>
+		    		<field name="price_unit"  invisible="1" />
 				<field name="no_editar" invisible="1" />
 				<field name="lotes_fabricar" invisible="1" />
 				<field name="lot_ids" invisible="1" />
