--- a/punt_eltete/views/res_partner.xml
+++ b/punt_eltete/views/res_partner.xml
@@ -130,6 +130,7 @@
             
             <field name="vat" position="after">
                 <field name='ice' />
+                <field name='importe_riesgo' />
             </field>
             
             <field name="category_id" position="after">
