--- a/punt_eltete/views/res_partner.xml
+++ b/punt_eltete/views/res_partner.xml
@@ -130,7 +130,8 @@
             
             <field name="vat" position="after">
                 <field name='ice' />
-                <field name='importe_riesgo' />
+                <field name='importe_pedido' />
+                <field name='importe_factura' />
             </field>
             
             <field name="category_id" position="after">
