--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -40,6 +40,14 @@
 		</group>
 		<group>
 		    <group>
+		        <field name="fsc_nombre"/> 	
+		    </group>
+		    <group>
+			<field name="fsc_impreso"/>	
+		    </group>
+		</group>
+		<group>
+		    <group>
 		    	<field name="user_peso_neto"/>
 		        <field name="user_peso_bruto"/>
 		    </group>	
