--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -262,18 +262,19 @@
 				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="estado_linea" />
+				<field name="fsc_linea" />
 		</group>
 		<group>		
 			<field name="lot_ids" widget="many2many" domain="[('disponible','=',True), ('product_id','=',product_id)]">
 				<tree string="Lotes" >
 					<field name='product_id' invisible="1"/>
 					<field name='name' />
+					<field name='fsc_nombre' />
 					<field name='descripcion' />
 					<field name='unidades' />
 					<field name="comentario"/>
 					<field name='peso_neto' />
 					<field name='fecha_entrada' />
-					<field name='picking_id' />
 					<field name="imprimir_etiqueta"/>
 					<field name='disponible' invisible="1"/>
 				</tree>
