--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -250,10 +250,10 @@
         
             <xpath expr="//form/sheet/group" position="after">
 		<group>
-                	<field name="order_id" invisible="1"/>
-			<field name="product_qty" invisible="1" />
-			<field name="no_editar" invisible="1" />
 			<group>
+				<field name="order_id" invisible="1"/>
+				<field name="product_qty" invisible="1" />
+				<field name="no_editar" invisible="1" />
 				<field name="lotes_fabricar"/>
 				<field name="lotes_inicio"/>
 				<field name="und_lotes"/>
@@ -266,8 +266,10 @@
 				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 			</group>
-			<field name="fsc_linea" />
-			<field name="fsc_venta" />
+			<group>
+				<field name="fsc_linea" />
+				<field name="fsc_venta" />
+			</group>
 		</group>
 		<group>		
 			<field name="lot_ids" widget="many2many" domain="[('disponible','=',True), ('product_id','=',product_id)]">
