--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -24,12 +24,15 @@
 			</field>
 			
 			<xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='price_unit']" position="before">
+				<field name="peso_neto" />
+				<field name="num_albaran" />
+            		</xpath>
+		
+			<xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='price_subtotal']" position="after">
 				<field name="fsc_nombre" />
 				<field name="fsc_venta" />
 				<field name="enlaces" />
-				<field name="peso_neto" />
-				<field name="num_albaran" />
-            </xpath>
+            		</xpath>
 			
 			
 			
