--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -12,6 +12,7 @@
 				<field name="importe_sin_descuento"/>
 				<field name="descuento_porcentaje"/>
 				<field name="importe_descuento"/>
+				<field name="enlaces" />
 			</field>
 
 			<field name="team_id" position="after">
@@ -22,6 +23,11 @@
 				<field name="precinto_contenedor" />
 				<field name="actualizar"/>
 			</field>
+		
+			<xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='quantity']" position="before">
+				<field name="fsc_nombre" />
+				<field name="fsc_venta" />
+            		</xpath>
 			
 			<xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='price_unit']" position="before">
 				<field name="peso_neto" />
@@ -29,8 +35,6 @@
             		</xpath>
 		
 			<xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='price_subtotal']" position="after">
-				<field name="fsc_nombre" />
-				<field name="fsc_venta" />
 				<field name="enlaces" />
             		</xpath>
 			
