--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -12,6 +12,9 @@
 				<field name="importe_sin_descuento"/>
 				<field name="descuento_porcentaje"/>
 				<field name="importe_descuento"/>
+			</field>
+		
+			<field name="sale_type_id" position="after">
 				<field name="fsc_enlaces" />
 			</field>
 
