--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -15,7 +15,8 @@
 			</field>
 		
 			<field name="sale_type_id" position="after">
-				<field name="fsc_enlaces" />
+				<field name="fsc_venta" invisible='1'/>
+				<field name="fsc_enlaces" />			
 			</field>
 
 			<field name="team_id" position="after">
