--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -57,6 +57,7 @@
 			</xpath>
 			
 			<xpath expr="//field[@name='partner_id']" position="after">
+				<field name="direccion_entrega_id"/>
 				<field name="provincia_id"/>
 				<field name="amount_untaxed" sum="Suma base"/>
 				<field name="peso_neto" sum="Peso Total"/>
