--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -245,6 +245,10 @@
                         <field name="product_id" />
 			<field name="comprado" invisible = "1"/>
                     </group>
+		
+		    <group>
+                        <button name="cargar_produccion" type="object" string="Cargar Producción" />
+                    </group>
                     
                     <h3>Referencia</h3>
                     <group>
