--- a/punt_eltete/views/product_template.xml
+++ b/punt_eltete/views/product_template.xml
@@ -280,6 +280,7 @@
                     <field name="number"/>
                     <field name="name"/>
                     <field name="description"/>
+		    <field name="familia"/>
                     <field name="active"/>
                     <field name="valido"/>
                     <field name="incremento"/>
@@ -299,6 +300,7 @@
                             <field name="number"/>
                             <field name="name"/>
                             <field name="description"/>
+			    <field name="familia"/>
                             <field name="active"/>
                             <field name="valido"/>
                             <field name="incremento"/>
