--- a/punt_eltete/views/purchase_order.xml
+++ b/punt_eltete/views/purchase_order.xml
@@ -71,6 +71,9 @@
 				<field name="taxes_id" invisible="1" />
 				<field name="cliente_id" invisible="1"/>
 				<field name="sale_line_id" domain="[('order_partner_id', '=', cliente_id),('incompleta', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
+				<field name='referencia_cliente_id' />
+				<field name='attribute_id' />
+				<field name='oferta_id' />
 				<field name='descripcion_bemeco' />
 				<field name="und_pallet" />
 				<field name="tipo_unidad" />
