--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -26,6 +26,7 @@
 				<field name="numero_contenedor" />
 				<field name="precinto_contenedor" />
 				<field name="actualizar"/>
+				<field name="credit_move_id"/>
 			</field>
 		
 			<xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='quantity']" position="before">
