--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -247,6 +247,7 @@
                     </group>
 		
 		    <group>
+			<field name="idProducto" />
                         <button name="cargar_produccion" type="object" string="Cargar Producción" />
                     </group>
                     
