--- a/punt_eltete/views/res_partner.xml
+++ b/punt_eltete/views/res_partner.xml
@@ -19,6 +19,8 @@
                 <group>
                     <field name="partner_id"/>
                     <field name="user_id"/>
+                    <field name="invoice_status"/>
+                    
                     <field name="date"/>
                     <field name="state_id"/>
                     <field name="country_id"/>
