--- a/punt_eltete/views/sale_cotizacion.xml
+++ b/punt_eltete/views/sale_cotizacion.xml
@@ -114,8 +114,8 @@
                         <field name="cotizacion_id"/>
                         <field name="partner_id"/>                        
                         <field name="referencia_cliente_id" domain="[('partner_id', '=', partner_id)]" />
-                        <field name="attribute_id" domain="[('referencia_cliente_id', '=', referencia_cliente_id)]"/>
-                        <field name="oferta_ids" domain="[('attribute_id', '=', attribute_id)]" widget="many2many_tags"/>
+                        <field name="attribute_id" domain="[('referencia_cliente_id', '=', referencia_cliente_id), ('activa', '=', 'True')]"/>
+                        <field name="oferta_ids" domain="[('attribute_id', '=', attribute_id), ('activa', '=', 'True')]" widget="many2many_tags"/>
                     </group>
                     
                     
