--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -315,6 +315,7 @@
         <field name="arch" type="xml">
         
             <field name="order_partner_id" position="after">
+		    		<field name="lotes_fabricar"/>
 				<field name="und_pallet"/>
 				<field name="num_pallets"/>
 				<field name="cantidad"/>
