--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -113,6 +113,7 @@
 		<field name="partner_id"/>
 		<field name="date_invoice"/>
 		<field name="comercial_bueno_id"/>
+		<field name="vendido"/>
 		<field name="importe_cantonera" sum="Importe Cantonera"/>
 		<field name="peso_cantonera" sum="Peso Cantonera"/>
 		<field name="eton_cantonera"/>
