--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -68,8 +68,8 @@
 			</xpath>
 			<xpath expr="//field[@name='state']" position="after">
 				<field name="estado"/>
-                		<field name="pendiente_facturar"/>
-                		<field name="pendiente_cobrar"/>
+                		<field name="pendiente_facturar" sum="Facturar"/>
+                		<field name="pendiente_cobrar" sum="Cobrar"/>
 			</xpath>
 		</field>
 	</record>
