--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -7,6 +7,7 @@
             <field name="arch" type="xml">
                 <tree string="Producto">
                     <field name="name"/>
+		    <field name="activa"/>
                     <field name="comentario_paletizado"/>
                     <field name="partner_id"/>
                     <field name="user_id"/>                    
