--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -19,7 +19,7 @@
                 <group>
 			<group>
 				<field name='importe_riesgo'/>
-				<field name='referencia_cliente_id' domain="[('partner_id', '=', partner_id),]" options="{'no_create': True, 'no_create_edit':True}" />
+				<field name='referencia_cliente_id' domain="[('partner_id', '=', partner_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}" />
 				<field name='attribute_id' domain="[('referencia_cliente_id', '=', referencia_cliente_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
 				<field name='oferta_id' domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
 				<field name='num_pallets' sum="Pallets" invisible="1"/>
