--- a/punt_eltete/views/stock_picking.xml
+++ b/punt_eltete/views/stock_picking.xml
@@ -23,9 +23,12 @@
             <xpath expr="//field[@name='origin']" position="after">
                 <field name="transporte"/>
                 <field name="neto_mojado_user" />
-				<field name="bruto_mojado_user" />
+		<field name="bruto_mojado_user" />
                 <field name="numero_contenedor"/>
                 <field name="precinto_contenedor"/>
+            </xpath>
+	    <xpath expr="//field[@name='origininvoice_ids']" position="after">
+                <field name="partner_id.special_conditions"/>
             </xpath>
 
             <xpath expr="//header" position="inside">
