--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -100,10 +100,10 @@
 		    <field name="product_id" invisible="1" />
                     <field name="descripcion" />
 		    <field name="num_pallets" attrs="{'readonly': [('no_editar', '=', True)]}"/>
-		    <field name="complemento_plastico_num" />
-		    <field name="complemento_reciclable_num" />
-		    <field name="complemento_portes_num" />
-		    <field name="complemento_urgente_num" />
+		    <field name="complemento_plastico" />
+		    <field name="complemento_reciclable" />
+		    <field name="complemento_portes" />
+		    <field name="complemento_urgente" />
 		    <field name="und_pallet" />
 		    <field name="cantidad" />
 		    <field name="precio" />
