--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -97,10 +97,13 @@
             <xpath expr="//field[@name='order_line']/tree/field[@name='qty_delivered']" position="before">
                 <field name="order_partner_id" invisible="1" />
 		    <field name="order_id" invisible="1"/>
-		    <field name="product_id" />
                     <field name="descripcion" />
+		    <field name="aclaracion" />
 		    <field name="num_pallets" attrs="{'readonly': [('no_editar', '=', True)]}"/>
-		    
+		    <field name="bultos" />
+		    <field name="fila_vinculada_id" domain="[('order_id', '=', order_id)]"/>
+		    <field name="estado_linea" />	
+		    <field name="und_user" invisible="1" />
 		    <field name="und_pallet" />
 		    <field name="cantidad" />
 		    <field name="precio" />
@@ -265,16 +268,12 @@
 				<field name="und_lotes"/>
 				<field name="fila_vinculada_id"  domain="[('order_id', '=', order_id)]"/>
 				<field name="orden_fabricacion"/>
-				<field name="estado_linea" />	
+				<field name="estado_linea" />
 			</group>
 			<group>
 				<field name="descripcion" />
-				<field name="product_id" />
 				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
-				<field name="aclaracion" />
-				<field name="bultos" />
-		    		<field name="fila_vinculada_id" domain="[('order_id', '=', order_id)]"/>
 			</group>
 			<group>
 				<field name="fsc_linea" />
